# phantom

./: .gitignore  CLAUDE.md  Makefile
.claude/rules/: ios-app.md  rust-daemon.md
daemon/: Cargo.toml
daemon/phantom-daemon/: Cargo.toml
daemon/phantom-daemon/examples/: test_client.rs
daemon/phantom-daemon/src/: auth.rs  bridge.rs  config.rs  device_store.rs  ipc.rs  lib.rs  main.rs  server.rs  session.rs  tls.rs
daemon/phantom-daemon/tests/: integration.rs
daemon/phantom-frame/: Cargo.toml
daemon/phantom-frame/src/: lib.rs
ios/Phantom/: Logging.swift  PhantomApp.swift
ios/Phantom.xcodeproj/: project.pbxproj
ios/Phantom/Crypto/: KeyManager.swift  PairingPayload.swift
ios/Phantom/DesignSystem/: PhantomHaptic.swift  PhantomTokens.swift
ios/Phantom/Models/: ConnectionState.swift
ios/Phantom/Network/: ControlChannel.swift  FrameCodec.swift  QUICClient.swift  ReconnectManager.swift
ios/Phantom/Storage/: DeviceStore.swift
ios/Phantom/Terminal/: TerminalContainerView.swift  TerminalDataSource.swift  TerminalTheme.swift
ios/Phantom/Views/: ConnectionOverlay.swift  ExtendedKeyPanel.swift  PairingView.swift  QuickKeyToolbar.swift  SessionListView.swift  SessionPill.swift  SessionTabBar.swift  SettingsView.swift  TerminalScreen.swift  ThemePickerView.swift
macos/PhantomBar/: DaemonClient.swift  DaemonMonitor.swift  Info.plist  PhantomBarApp.swift  SetupManager.swift
macos/PhantomBar.xcodeproj/: project.pbxproj
macos/PhantomBar/Models/: DaemonState.swift  (+1 more)
scripts/: build-release.sh  bump-version.sh  generate-dmg-background.py  generate-icon.py
(+7 files in other folders)
